--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "16.14.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -27,7 +29,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
