--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "babel-plugin-styled-components": "^1.11.1",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.11.0",
