--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.5",
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.7.3",
+    "next": "^10.0.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "^5.2.0"
@@ -21,6 +23,8 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "@zeit/next-less": "^1.0.1",
+    "babel-plugin-import": "^1.13.1",
     "babel-plugin-styled-components": "^1.11.1",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.3.0",
@@ -28,7 +32,11 @@
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "less": "^3.12.2",
+    "less-vars-to-js": "^1.3.0",
     "lint-staged": "^10.4.2",
+    "next-compose-plugins": "^2.2.0",
+    "null-loader": "^4.0.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
