--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,6 @@
   "presets": ["next/babel"],
   "plugins": [
     ["styled-components", { "ssr": true }],
-    ["import", { "libraryName":  "antd", "style":  true}]
+    ["import", { "libraryName":  "antd", "style":  "css"}]
   ]
 }
