--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.7.3",
     "next": "^10.0.0",
+    "next-dynamic-antd-theme": "^0.0.15",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "^5.2.0"
@@ -23,10 +24,14 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-styled-components": "^1.11.1",
     "commitizen": "^4.2.1",
+    "css": "^3.0.0",
+    "css-loader": "^5.0.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
@@ -36,6 +41,7 @@
     "less-vars-to-js": "^1.3.0",
     "lint-staged": "^10.4.2",
     "next-compose-plugins": "^2.2.0",
+    "next-transpile-modules": "^4.1.0",
     "null-loader": "^4.0.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
