build: add react-css-theme-switcher for dynamic theme
In this we use react-css-theme-switcher approach. It works but we lose state (e.g antd switch
transition)

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": ["next/babel"],
   "plugins": [
-    ["styled-components", { "ssr": true }],
-    ["import", { "libraryName":  "antd", "style":  "css"}]
+    ["styled-components", { "ssr": true }]
   ]
 }
