--- a/package.json
+++ b/package.json
@@ -3,58 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "gulp:less": "npx gulp less",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "antd": "^4.7.3",
-    "next": "^10.0.0",
-    "next-dynamic-antd-theme": "^0.0.15",
-    "react": "16.14.0",
-    "react-css-theme-switcher": "^0.1.6",
-    "react-dom": "16.14.0",
-    "styled-components": "^5.2.0"
+    "next": "10.0.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/node": "^14.11.10",
-    "@types/react": "^16.9.53",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
     "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "autoprefixer": "^10.0.1",
-    "babel-plugin-import": "^1.13.1",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "commitizen": "^4.2.1",
-    "css": "^3.0.0",
-    "css-loader": "^5.0.0",
+    "commitizen": "^4.2.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.11.0",
+    "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "gulp": "^4.0.2",
-    "gulp-csso": "^4.0.1",
-    "gulp-debug": "^4.0.0",
-    "gulp-less": "^4.0.1",
-    "gulp-postcss": "^9.0.0",
     "husky": "^4.3.0",
-    "less": "^3.12.2",
-    "less-plugin-npm-import": "^2.1.0",
-    "less-vars-to-js": "^1.3.0",
-    "lint-staged": "^10.4.2",
-    "next-compose-plugins": "^2.2.0",
-    "next-transpile-modules": "^4.1.0",
-    "null-loader": "^4.0.1",
-    "postcss": "^8.1.4",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
